# arkiv-quickwit-indexer

./: Cargo.toml  Dockerfile  LICENSE  README.md  arkiv-quickwit-bridge.example.yaml
demo-docker-stack/: README.md  WSL-CONTAINERS.md  docker-compose.yml
demo-docker-stack/bridge-config/: config.yaml
demo-docker-stack/frontend/: index.html  nginx.conf
demo-docker-stack/quickwit-config/: arkiv-index.yaml  quickwit.yaml
index-config/: arkiv-index.yaml
src/: audit.rs  config.rs  control_loop.rs  delete_scheduler.rs  doc.rs  error.rs  extract.rs  main.rs  metrics.rs  quickwit_client.rs  reorg.rs  state_store.rs
src/rpc/: arkiv.rs  eth.rs  mod.rs
systemd/: arkiv-quickwit-bridge.service
